--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    implementation 'com.stripe:stripe-android:16.0.1'
     implementation 'com.google.android.gms:play-services-wallet:18.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
