--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.stripe:stripe-android:16.0.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.google.android.gms:play-services-wallet:18.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
