--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RestaurantMenuListActivity"></activity>
+        <activity android:name=".CartActivity"></activity>
+        <activity android:name=".RestaurantMenuListActivity" />
         <activity android:name=".DisplayRestaurants" />
         <activity android:name=".RestaurantsNearMe" />
         <activity
