--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.stripe:stripe-android:16.0.1'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.x.x'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.google.android.gms:play-services-wallet:18.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
