--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".DeliveryActivity"></activity>
-        <activity android:name=".CartActivity" />
+        <activity android:name=".CartActivity"
+            android:theme="@style/NoActionBar"/>
         <activity android:name=".RestaurantMenuListActivity"/>
         <activity android:name=".DisplayRestaurants" />
         <activity android:name=".RestaurantsNearMe" />
